Fix(#542) Wrong background in the login form.

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -9,7 +9,7 @@ page-login {
 
         &::after {
             content: "";
-            background: url("../assets/img/bg2.png") no-repeat;
+            background: url("../assets/img/bg2.jpg") no-repeat;
             background-size: cover;
             top: 0;
             left: 0;
